# PreAct

./: .gitignore  CODE_DESIGN.md  DESIGN.md  EVALUATION_REPORT.md  README.md  RESULTS.md  android_server_patched.py  embedding_ablation_results.json  pyproject.toml  run_ablation.py  run_evaluation.py  run_mutation_test.py  run_transfer_test.py
backups/pre_run7/: webarena_run6_results.json
benchmark/: evaluator.py  run_benchmark.py  tasks.json
benchmark/androidworld/: run_androidworld.py  run_docker.py
benchmark/osworld/: run_osworld.py
benchmark/testsite/: app.py
benchmark/webarena/: auth.py  evaluator.py  quick_test.py  run_webarena.py  setup.py
paper/: README.md  abstract_v2.md  figures.md  findings_summary.md  methods_ab_design.md  plan_v2.md
paper/latex/: arxiv.sty  preact.tex  references.bib
preact/: __init__.py  cli.py  config.py  schemas.py
preact/baselines/: __init__.py  base.py  preact_baseline.py  standard_cua.py
preact/core/: __init__.py  agent.py  refinement.py
preact/cua/: __init__.py  action_parser.py  loop.py  prompts.py
preact/environment/: __init__.py  base.py  browser.py  docker_env.py
preact/evaluation/: __init__.py  experiments.py  (+5 more)
scripts/: android_multiseed_queue.sh  baselines_n3_queue.sh  build_programs_data.py  embedding_selector_ablation.py  osworld_ood_reps.sh  webarena_experiments_queue.sh
site/: README.md  index.html  package-lock.json  package.json  vite.config.js
tests/: test_action_parser.py  test_executor.py  test_integration.py  test_live_pipeline.py  test_metrics.py  test_recorder.py  test_schemas.py
(+83 files in other folders)
