[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preact"
version = "0.1.0"
description = "PreAct: Predictive Actions for High-Performance Computer Using Agents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "playwright>=1.40",
    "google-genai>=1.0",
    "chromadb>=0.4",
    "numpy>=1.24",
    "aiofiles>=23.0",
    "tenacity>=8.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
]
baselines = [
    "openai>=1.0",
]

[project.scripts]
preact = "preact.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
